[package]
name = "gdb-agent"
version = "0.1.2"
edition = "2018"
authors = ["Kyle Huey <khuey@kylehuey.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/khuey/gdb-agent"
description = "Gdb agent bytecode handling utilities."
keywords = ["gdb", "debugger"]

[features]
default = ["std"]

std = ["alloc", "managed/std"]
alloc = ["managed/alloc"]

[dependencies]
managed = { version = "0.8.0", default-features = false }
num_enum = "0.5"
